force-app/main/default/objects/Contact/fields/Account_Function__c.field-meta.xml
<CustomField>
    <fullName>Account_Function__c</fullName>
    <label>Account Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>