force-app/main/default/objects/Contact/fields/Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Team</label>
    <referenceTo>Account_Team__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>