force-app/main/default/objects/Contact/fields/Available_Description__c.field-meta.xml
<CustomField>
    <fullName>Available_Description__c</fullName>
    <label>Available Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>