force-app/main/default/objects/Contact/fields/CV_Text__c.field-meta.xml
<CustomField>
    <fullName>CV_Text__c</fullName>
    <label>CV Text</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>