force-app/main/default/objects/Contact/fields/Field_Of_Study__c.field-meta.xml
<CustomField>
    <fullName>Field_Of_Study__c</fullName>
    <label>Field Of Study</label>
    <length>150</length>
    <type>Text</type>
</CustomField>