force-app/main/default/objects/Contact/fields/isBlacklist__c.field-meta.xml
<CustomField>
    <fullName>isBlacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBlacklist</label>
    <type>Checkbox</type>
</CustomField>