force-app/main/default/objects/Contact/fields/isBlocked__c.field-meta.xml
<CustomField>
    <fullName>isBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBlocked</label>
    <type>Checkbox</type>
</CustomField>