force-app/main/default/objects/Contact/fields/isExcel_Import__c.field-meta.xml
<CustomField>
    <fullName>isExcel_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isExcel Import</label>
    <type>Checkbox</type>
</CustomField>