force-app/main/default/objects/Contact/fields/isLinkedIn_Found__c.field-meta.xml
<CustomField>
    <fullName>isLinkedIn_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLinkedIn Found</label>
    <type>Checkbox</type>
</CustomField>