force-app/main/default/objects/Contact/fields/isLinkedIn_Import__c.field-meta.xml
<CustomField>
    <fullName>isLinkedIn_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLinkedIn Import</label>
    <type>Checkbox</type>
</CustomField>