force-app/main/default/objects/Contact/fields/isMonster_Import__c.field-meta.xml
<CustomField>
    <fullName>isMonster_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMonster Import</label>
    <type>Checkbox</type>
</CustomField>