force-app/main/default/objects/Contact/fields/isPerm__c.field-meta.xml
<CustomField>
    <fullName>isPerm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPerm</label>
    <type>Checkbox</type>
</CustomField>