force-app/main/default/objects/Contact/fields/isProcessed__c.field-meta.xml
<CustomField>
    <fullName>isProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProcessed</label>
    <type>Checkbox</type>
</CustomField>