force-app/main/default/objects/Contact/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>