force-app/main/default/objects/Contact/fields/LastMailshot__c.field-meta.xml
<CustomField>
    <fullName>LastMailshot__c</fullName>
    <label>Last Mailshot</label>
    <summarizedField>Candidate_Mailshot__c.CreatedDate</summarizedField>
    <summaryForeignKey>Candidate_Mailshot__c.Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>