force-app/main/default/objects/Contact/fields/LegacyAccountID__c.field-meta.xml
<CustomField>
    <fullName>LegacyAccountID__c</fullName>
    <externalId>true</externalId>
    <label>LegacyAccountID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>