force-app/main/default/objects/Contact/fields/LinkedIn_Recruiter_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Recruiter_Profile__c</fullName>
    <label>LinkedIn Recruiter Profile</label>
    <type>Url</type>
</CustomField>