force-app/main/default/objects/Contact/fields/Opt_out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_Reason__c</fullName>
    <label>Opt-out Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>