force-app/main/default/objects/Contact/fields/Portal_Active__c.field-meta.xml
<CustomField>
    <fullName>Portal_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Active</label>
    <type>Checkbox</type>
</CustomField>