force-app/main/default/objects/Contact/fields/Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Portal ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>