force-app/main/default/objects/Contact/fields/Profile_Updated__c.field-meta.xml
<CustomField>
    <fullName>Profile_Updated__c</fullName>
    <label>Profile Updated</label>
    <type>DateTime</type>
</CustomField>