force-app/main/default/objects/Contact/fields/ProfileCreated__c.field-meta.xml
<CustomField>
    <fullName>ProfileCreated__c</fullName>
    <label>ProfileCreated</label>
    <type>DateTime</type>
</CustomField>