force-app/main/default/objects/Contact/fields/Raw_Skills__c.field-meta.xml
<CustomField>
    <fullName>Raw_Skills__c</fullName>
    <label>Raw Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>