force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Situation</fullName>
            </value>
            <value>
                <fullName>Closes</fullName>
            </value>
            <value>
                <fullName>IV Process</fullName>
            </value>
            <value>
                <fullName>Tech Skills</fullName>
            </value>
            <value>
                <fullName>Expectations</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Initial Contact</fullName>
            </value>
            <value>
                <fullName>Motivation</fullName>
            </value>
            <value>
                <fullName>Needs</fullName>
            </value>
            <value>
                <fullName>Relocator</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Candidate USP</fullName>
            </value>
            <value>
                <fullName>Counter Offer</fullName>
            </value>
            <value>
                <fullName>Other Opportunities</fullName>
            </value>
            <value>
                <fullName>Business not to approach</fullName>
            </value>
            <value>
                <fullName>Closing on availability</fullName>
            </value>
            <value>
                <fullName>Selling your service</fullName>
            </value>
            <value>
                <fullName>Selling Exclusivity</fullName>
            </value>
            <value>
                <fullName>Identifying Alarmbells</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>