force-app/main/default/objects/Contact/fields/Studierichting__c.field-meta.xml
<CustomField>
    <fullName>Studierichting__c</fullName>
    <label>Studierichting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>