force-app/main/default/objects/Contact/fields/Tarief__c.field-meta.xml
<CustomField>
    <fullName>Tarief__c</fullName>
    <label>Tarief</label>
    <length>255</length>
    <type>Text</type>
</CustomField>