force-app/main/default/objects/Contact/fields/Text_Skills__c.field-meta.xml
<CustomField>
    <fullName>Text_Skills__c</fullName>
    <label>Text Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>