force-app/main/default/objects/Contact/fields/Total_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Experience__c</fullName>
    <label>Total Experience</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>