force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambasador</fullName>
            </value>
            <value>
                <fullName>Top 30</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Market Potential Cands</fullName>
            </value>
            <value>
                <fullName>Incomplete CV</fullName>
            </value>
            <value>
                <fullName>Nog uitzoeken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>