force-app/main/default/objects/Contact/recordTypes/Contact.recordType-meta.xml
<RecordType>
    <fullName>Contact</fullName>
    <active>true</active>
    <description>Client Contact record type</description>
    <label>Contact</label>
</RecordType>