force-app/main/default/objects/Contact/recordTypes/Freelance.recordType-meta.xml
<RecordType>
    <fullName>Freelance</fullName>
    <active>true</active>
    <description>Freelancer Record type</description>
    <label>Freelance Candidate</label>
</RecordType>