force-app/main/default/objects/Contact/recordTypes/Permanent.recordType-meta.xml
<RecordType>
    <fullName>Permanent</fullName>
    <active>true</active>
    <description>Permanent Candidate Record Type</description>
    <label>Permanent Candidate</label>
</RecordType>